force-app/main/default/objects/Alert__c/fields/FF_Rank__c.field-meta.xml
<CustomField>
    <fullName>FF_Rank__c</fullName>
    <formula>IF (
  TEXT(Type__c) = &apos;Danger&apos;, 3,
  IF (
    TEXT(Type__c) = &apos;Warning&apos;, 2,
    IF (
      TEXT(Type__c) = &apos;Info&apos;, 1, 0
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>