force-app/main/default/objects/Alert__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>