force-app/main/default/objects/Alert__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
                <default>true</default>
                <label>ℹ️ Info</label>
            </value>
            <value>
                <fullName>Warning</fullName>
                <label>🟡 Warning</label>
            </value>
            <value>
                <fullName>Danger</fullName>
                <label>🚨 Danger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>