force-app/main/default/objects/Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>ExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>