force-app/main/default/objects/Alert__c/listViews/Danger_Alerts.listView-meta.xml
<ListView>
    <fullName>Danger_Alerts</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>ExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Danger</value>
    </filters>
    <label>🚨 Danger Alerts</label>
</ListView>