force-app/main/default/objects/Alert__c/listViews/Warning_Alerts.listView-meta.xml
<ListView>
    <fullName>Warning_Alerts</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>ExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Warning</value>
    </filters>
    <label>🟡 Warning Alerts</label>
</ListView>